Suppresed the ":" in desc of crepes recipes and finished the chocolate cookies recipe

--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -13,7 +13,7 @@
         height="400"
         alt="Pile of delicious crepes">
 
-        <h2>Description:</h2>
+        <h2>Description</h2>
 
         <p>
             A crêpe or crepe is a very thin type of pancake. Crêpes originated in Brittany, a region in the west of France, during the 13th century,
@@ -29,7 +29,7 @@
         <p>For this recipe we will make sweet crepes</p>
 
 
-        <h2>Ingredients:</h2>
+        <h2>Ingredients</h2>
 
         <ul>
             <li>Flour</li>
