--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
         <li><a href="./recipes/crepes.html">Crepe Recipes</a></li>
         <li><a href="./recipes/salted-chocolate-cookies.html">Salted Chocolate Cookies Recipe</a></li>
+        <li><a href="./recipes/apple-pie.html">Apple Pie Recipe</a></li>
         </ul>
     </body>
 </html>
