Added a link to the homepage on all the recipe page

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -36,6 +36,6 @@
             <li>Put it in the oven for 20 minutes at 200 degres</li>
             <li>Enjoy !</li>
         </ol>
-
+        <a href="../index.html">Homepage</a>
     </body>
 </html>
