--- a/recipes/salted-chocolate-cookies.html
+++ b/recipes/salted-chocolate-cookies.html
@@ -47,5 +47,8 @@
             <li>Bake in the preheated oven until cookies have spread and flattened to a diameter of 4 1/2 inches or larger, and the tops are crinkled and puffed, 12 to 14 minutes. Immediately sprinkle with sea salt.</li>
             <li>Place baking sheets on a wire rack and cool for 18 to 20 minutes. Remove cookies with a spatula onto serving platter.</li>
         </ol>
+
+
+        <a href="../index.html">Homepage</a>
     </body>
 </html>
