--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
 
         <ul>
-        <li><a href="./recipes/crepes.html">Crepe Recipes</a></li>
-        <li><a href="./recipes/salted-chocolate-cookies.html">Salted Chocolate Cookies Recipe</a></li>
-        <li><a href="./recipes/apple-pie.html">Apple Pie Recipe</a></li>
+        <li class="odd"><a href="./recipes/crepes.html">Crepe Recipes</a></li>
+        <li class="even"><a href="./recipes/salted-chocolate-cookies.html">Salted Chocolate Cookies Recipe</a></li>
+        <li class="odd"><a href="./recipes/apple-pie.html">Apple Pie Recipe</a></li>
         </ul>
     </body>
 </html>
