--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Apple Pie Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
@@ -10,6 +11,8 @@
 
         <img src="http://www.lesfoodies.com/_recipeimage/274858/tarte-aux-pommes-traditionnelle.jpg"
         alt="A beautiful and delicious apple pie"
+        height="450"
+        width="500"
         >
 
         <h2>Description</h2>
