--- a/recipes/salted-chocolate-cookies.html
+++ b/recipes/salted-chocolate-cookies.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Salted Chocolate Cookies Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
