Changed the cookies image and added propper credits for the images in the README

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Apple Pie Recipe</h1>
 
-        <img src="http://www.lesfoodies.com/_recipeimage/274858/tarte-aux-pommes-traditionnelle.jpg"
+        <img src="../images/tarte-aux-pommes.jpg"
         alt="A beautiful and delicious apple pie"
         height="450"
         width="500"
