--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Crepe Recipe</h1>
 
-        <img src="https://s3.eu-central-1.amazonaws.com/gm-production.com/media/image/image/01-19-2021/296145.jpeg"
+        <img src="../images/crepes.jpg"
         width="550"
         height="400"
         alt="Pile of delicious crepes">
