--- a/recipes/salted-chocolate-cookies.html
+++ b/recipes/salted-chocolate-cookies.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Salted Chocolate Cookies Recipe</h1>
 
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7521860.jpg&q=85"
+        <img src="../images/chocolate-cookies.jpg"
         height="550"
         width="500"
         alt="Closup on a delicious salted chocolate cookie">
